--- a/docker_client/Dockerfile
+++ b/docker_client/Dockerfile
@@ -1,12 +1,9 @@
-FROM ubuntu:20.04
+FROM ubuntu
 RUN apt-get update
 RUN apt-get install -y default-jre 
 RUN apt-get install -y net-tools
 COPY GenericNode.jar /
 COPY entrypoint_client.sh /
-COPY bigtest_uc.sh /
-COPY bigtest_rc.sh /
-COPY bigtest_tc.sh /
 ENTRYPOINT ["/entrypoint_client.sh"]
 CMD ["300"]
 
