--- a/docker_client/Dockerfile
+++ b/docker_client/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu
+FROM ubuntu:20.04
 RUN apt-get update
 RUN apt-get install -y default-jre 
 RUN apt-get install -y net-tools
@@ -6,5 +6,4 @@ COPY GenericNode.jar /
 COPY entrypoint_client.sh /
 ENTRYPOINT ["/entrypoint_client.sh"]
 CMD ["300"]
-
 
