--- a/docker_server/Dockerfile
+++ b/docker_server/Dockerfile
@@ -1,8 +1,7 @@
-FROM ubuntu
+FROM ubuntu:20.04
 RUN apt-get update
 RUN apt-get install -y default-jre
 RUN apt-get install -y net-tools
 COPY GenericNode.jar /
 COPY runserver.sh /
 ENTRYPOINT ["/runserver.sh"]
-
