--- a/docker_client/Dockerfile
+++ b/docker_client/Dockerfile
@@ -2,6 +2,7 @@ FROM ubuntu
 RUN apt-get update
 RUN apt-get install -y default-jre 
 RUN apt-get install -y net-tools
+RUN apt install -y nano
 COPY GenericNode.jar /
 COPY entrypoint_client.sh /
 COPY bigTest_tc.sh /
